--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "pinia": "^2.0.32",
     "sass": "^1.59.3",
     "sass-loader": "^13.2.1",
+    "validator": "^13.9.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
