--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "animejs": "^3.2.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.32",
     "sass": "^1.59.3",
