--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "animejs": "^3.2.1",
     "nprogress": "^0.2.0",
+    "overlayscrollbars-vue": "^0.5.1",
     "pinia": "^2.0.32",
     "sass": "^1.59.3",
     "sass-loader": "^13.2.1",
