--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sass-loader": "^13.2.1",
     "validator": "^13.9.0",
     "vue": "^3.2.47",
+    "vue-content-loader": "^2.0.1",
     "vue-router": "^4.1.6",
     "vue-slicksort": "^2.0.5",
     "vuedraggable": "^4.1.0"
