--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-content-loader": "^2.0.1",
     "vue-router": "^4.1.6",
     "vue-slicksort": "^2.0.5",
+    "vue-toastification": "^2.0.0-rc.5",
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
